Fixing spacing

--- a/app/public/javascripts/src/react/components/map/map-split.css
+++ b/app/public/javascripts/src/react/components/map/map-split.css
@@ -104,6 +104,7 @@
   flex-direction: column;
   height: 100%;
   padding-right: 10px;
+  padding-left: 10px;
 }
 
 .display-mode-container .display-mode-buttons {
